--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,9 @@
   }
 }
  */
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-inter), sans-serif;
 }
