more work on the form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,11 @@ body {
   background: var(--background);
   font-family: var(--font-inter), sans-serif;
 }
+
+.rs__control {
+  @apply rounded-lg !important
+}
+
+.rs__value-container {
+  @apply px-3 py-2.5 !important
+}
