--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: #147D73;
   font-family: var(--font-inter), sans-serif;
 }
 
